--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,4 @@
 MONGO_URI=mongodb+srv://umariqbalfazal_db_user:SYzSix1iQOw44hrr@notetakingapp.dwuxwqf.mongodb.net/NoteApp?retryWrites=true&w=majority&appName=NoteTakingApp
+
+JWT_SECRET=supersecretkey123
+PORT=5001
